# Weather_Api_practical

./: README.md  pyproject.toml
templates/weather_app/: index.html
weather_app/: urls.py  views.py
weather_project/: settings.py  urls.py
