[tool.poetry]
name = "flight-weather-tracker"
version = "1.0.0"
description = "An application to plan out your travel with weather and flight datas"
authors = ["MuratbekJ <muratbekj2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
